[gd_scene load_steps=8 format=2]

[ext_resource path="res://3D platforming/Scripts/Player/Third_Person_Controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.8

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.75, 0.5, 0.75 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 0.25, 0.35, 0.75 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.25, 0.35, 0.5 )

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Player_mesh/Body:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.65, 0.85, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.124089, 0 ), Vector3( 0, -0.1, 0 ), Vector3( 0, -0.1, 0 ), Vector3( 0, -0.124089, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player_mesh/Body/Arm_l:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.5, 0, 0.05 ), Vector3( -0.575, 0, 0 ), Vector3( -0.55, 0, 0 ), Vector3( -0.575, 0, 0 ), Vector3( -0.5, 0, 0.05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player_mesh/Body/Arm_r:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, 0, 0.05 ), Vector3( 0.575, 0, 0 ), Vector3( 0.55, 0, 0 ), Vector3( 0.575, 0, 0 ), Vector3( 0.5, 0, 0.05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player_mesh/Body/Leg_l:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.2, 0, 0.6 ), Vector3( 0.2, 0, 0.625 ), Vector3( 0.2, 0, 0.6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Player_mesh/Body/Leg_r:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.2, 0, 0.6 ), Vector3( -0.2, 0, 0.625 ), Vector3( -0.2, 0, 0.6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player_mesh/Body/Head:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.65, 0.85, 1.4 ),
"transitions": PoolRealArray( 1, 1, 0.35, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -0.65 ), Vector3( 0, 0, -0.675 ), Vector3( 0, 0, -0.675 ), Vector3( 0, 0, -0.65 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Player_mesh/Body/Arm_l:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -7.5, 0 ), Vector3( 0, -5, 0 ), Vector3( 0, -7.5, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Player_mesh/Body/Arm_r:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 5, 0 ), Vector3( 0, 7.5, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Player_mesh/Body:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.1, 0.65, 0.85, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.98, 1, 1.02 ), Vector3( 0.98, 1, 1.02 ), Vector3( 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0731171, 0 )
shape = SubResource( 1 )

[node name="Player_mesh" type="Spatial" parent="."]

[node name="Body" type="CSGMesh" parent="Player_mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.124089, 0 )
mesh = SubResource( 4 )

[node name="Head" type="CSGMesh" parent="Player_mesh/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.65 )
mesh = SubResource( 3 )

[node name="Arm_l" type="CSGMesh" parent="Player_mesh/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.05 )
mesh = SubResource( 5 )

[node name="Arm_r" type="CSGMesh" parent="Player_mesh/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.05 )
mesh = SubResource( 5 )

[node name="Leg_l" type="CSGMesh" parent="Player_mesh/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0.6 )
mesh = SubResource( 6 )

[node name="Leg_r" type="CSGMesh" parent="Player_mesh/Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0.6 )
mesh = SubResource( 6 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Cam_Pivot" type="Spatial" parent="Head"]

[node name="ClippedCamera" type="ClippedCamera" parent="Head/Cam_Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
fov = 85.0

[node name="Edge_rays" type="Spatial" parent="."]

[node name="Down_ray" type="RayCast" parent="Edge_rays"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1, -1 )

[node name="Accros_ray" type="RayCast" parent="Edge_rays"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.4, 0 )
enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 7 )
